...
            "state" : "translated",
            "value" : "Unos %@"
          }
        }
      }
    },
    "Add Installer…" : {
      "comment" : "VoiceOver name of the dashed square with a plus.",
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Añadir instalador…"
...
            "state" : "translated",
            "value" : "Disponible en una versión posterior."
          }
        }
      }
    },
    "Back" : {
      "comment" : "Secondary button in the assistant footer that goes to the previous step.",
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Atrás"
...
            "state" : "translated",
            "value" : "Conexión"
          }
        }
      }
    },
    "Continue" : {
      "comment" : "Primary button in the assistant footer that goes to the next step.",
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Continuar"
...
            "state" : "translated",
            "value" : "Listo"
          }
        }
      }
    },
    "Download from Apple…" : {
      "comment" : "Button on the Installer screen that opens the installer download screen.",
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Descargar desde Apple…"
...
            "state" : "translated",
            "value" : "LIBRE DESPUÉS"
          }
        }
      }
    },
    "Go" : {
      "comment" : "Menu bar menu with commands to move through the assistant.",
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Ir"
...
